--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/cookingjs/cooking-lint#readme",
   "dependencies": {
-    "eslint": "^2.10.0",
-    "eslint-loader": "^1.3.0",
+    "eslint": "*",
+    "eslint-loader": "*",
     "eslint-friendly-formatter": "*",
     "eslint-config-defaults": "*",
     "eslint-config-elemefe": "*",
